# Moveit2-Ros1-Control-AUBO

./: .gitignore  env.sh
aubo_ros1_control_ws/src/: README.md
aubo_ros1_control_ws/src/aubo_controller/: CMakeLists.txt
aubo_ros1_control_ws/src/aubo_controller/include/: joint_trajectory_action.h
aubo_ros1_control_ws/src/aubo_controller/script/aubo_controller/: aubo_robot_simulator
aubo_ros1_control_ws/src/aubo_controller/src/: aubo_robot_simulator.cpp  joint_trajectory_action.cpp
aubo_ros1_control_ws/src/aubo_description/urdf/: aubo_i5.urdf
aubo_ros1_control_ws/src/aubo_driver/: CMakeLists.txt
aubo_ros1_control_ws/src/aubo_i5_moveit_config/config/: aubo_i5.srdf  kinematics.yaml
aubo_ros1_control_ws/src/aubo_i5_moveit_config/launch/: moveit.rviz  moveit_planning_execution.launch  planning_context.launch
aubo_ros2_moveit2_ws/src/aubo_messages/: CMakeLists.txt  package.xml
aubo_ros2_moveit2_ws/src/aubo_messages/src/: switch_client.cpp  switch_server.cpp
aubo_ros2_moveit2_ws/src/aubo_messages/srv/: NotSwitch.srv  Switch.srv
aubo_ros2_moveit2_ws/src/cpp_srvcli/: CMakeLists.txt  package.xml
aubo_ros2_moveit2_ws/src/cpp_srvcli/include/cpp_srvcli/: switch_client.h
aubo_ros2_moveit2_ws/src/cpp_srvcli/src/: switch_client.cpp
aubo_ros2_moveit2_ws/src/run_move_group/: CMakeLists.txt  package.xml
aubo_ros2_moveit2_ws/src/run_move_group/launch/: auboi5_moveit.launch.py  run_move_group_interface.launch.py
aubo_ros2_moveit2_ws/src/run_move_group/src/: run_move_group.cpp
